# notificacao-clientes

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.local  README.md  csv_templates_supabase.csv  docker-compose.postgres.yml  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt
app/: __init__.py  main.py
dados_seed/: consultas_teste.csv  fornecedores_teste.csv
popula-tabelas/: run.py  run_migracao_orquestracao.py
tests/: conftest.py  test_api_clique.py  test_catalogo_templates_dashboard.py  test_clique_token.py  test_codigo_verificacao_sms.py  test_comprador_busca_enviar.py  test_comprador_busca_sms.py  test_contexto_genericos.py  test_conversoes_site_compradores.py  test_decidir_variantes_email.py  test_entrada_ligacao_apos_falha_whatsapp.py  test_entrada_whatsapp_aparicoes.py  test_extrair_uf_company_profile.py  test_fallback_sms_invalido.py  test_fornecedor_contato_email.py  test_fragmentar_contatos_recebe_consulta.py  test_growthbook_variante_email.py  test_ligacoes_dispatch.py  test_limpar_pendentes_ja_enviados.py  test_materializar_variante_email.py  test_mensagem_whatsapp.py  test_migrar_telefone_engajamento.py  test_montar_dados_clique_row.py  test_montar_pedido_contexto_busca.py  test_montar_url_landing_clique.py  test_mutacoes_dashboard_servico.py  test_n8n_rotas.py  test_ordenar_engajamento_lista.py  test_orquestracao_decidir_canal.py  test_orquestracao_rotas_auth.py  test_processar_status_email_machine_open.py  test_recebe_consulta_dto.py  test_redis_contato_fornecedores.py  test_redis_historico_whatsapp.py  (+17 more)
(+252 files in other folders)
