# Empacotamento e dependências do projeto (equivalente conceitual ao Maven no Java).
[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "sistema-email"
version = "0.1.0"
description = "API de notificações por e-mail — infraestrutura inicial"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic-settings>=2.6",
  "email-validator>=2.0",
  "redis>=5.2",
  "httpx>=0.28",
  "asyncpg>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = [".", "popula-tabelas"]
testpaths = ["tests"]
python_files = ["test_*.py", "teste_*.py"]
